--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=DallasTemperature
-version=3.8.1
-author=Miles Burton <miles@mnetcs.com>, Tim Newsome <nuisance@casualhacker.net>, Guil Barros <gfbarros@bappos.com>, Rob Tillaart <rob.tillaart@gmail.com>
-maintainer=Miles Burton <miles@mnetcs.com>
-sentence=Arduino Library for Dallas Temperature ICs
-paragraph=Supports DS18B20, DS18S20, DS1822, DS1820
+name=DallasGPIO
+version=1.0.0
+author=Miles Burton <miles@mnetcs.com>, Tim Newsome <nuisance@casualhacker.net>, Guil Barros <gfbarros@bappos.com>, Rob Tillaart <rob.tillaart@gmail.com>, Howard Dutton <hjd1964@gmail.com>
+maintainer=Howard Dutton <hjd1964@gmail.com>
+sentence=Arduino Library for Dallas GPIO IC
+paragraph=Supports DS2413
 category=Sensors
-url=https://github.com/milesburton/Arduino-Temperature-Control-Library
+url=https://github.com/hjd1964/Arduino-DS2413GPIO-Control-Library
 architectures=*
 depends=OneWire
