--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author=Miles Burton <miles@mnetcs.com>, Tim Newsome <nuisance@casualhacker.net>,
 maintainer=Howard Dutton <hjd1964@gmail.com>
 sentence=Arduino Library for Dallas GPIO IC
 paragraph=Supports DS2413
-category=Sensors
+category=Signal Input/Output
 url=https://github.com/hjd1964/Arduino-DS2413GPIO-Control-Library
 architectures=*
 depends=OneWire
