--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Supports DS2413
 category=Signal Input/Output
 url=https://github.com/hjd1964/Arduino-DS2413GPIO-Control-Library
 architectures=*
-depends=OneWire
+depends=OneWireX
